src/test/ui/type/type-annotation-needed.stderr
error[E0283]: type annotations needed
  --> $DIR/type-annotation-needed.rs:6:5
   |
LL |     foo(42);
   |     ^^^ cannot infer type for type parameter `T` declared on the function `foo`
   |
help: type parameter declared here
  --> $DIR/type-annotation-needed.rs:1:8
   |
LL | fn foo<T: Into<String>>(x: i32) {}
   |        ^
   = note: cannot satisfy `_: Into<String>`
note: required by a bound in `foo`
  --> $DIR/type-annotation-needed.rs:1:11
   |
LL | fn foo<T: Into<String>>(x: i32) {}
   |           ^^^^^^^^^^^^ required by this bound in `foo`
help: consider specifying the type argument in the function call
   |
LL |     foo::<T>(42);
   |        +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
